--- a/index.html
+++ b/index.html
@@ -98,15 +98,13 @@
     <!--Hello-->
     <section id="hello" class="container section">
         <div class="row">
-            <div class="col-md-10">
+            <div class="col-md-10 d-none">
                 <h2 id="hello_header" class="section__title">Hola_</h2>
                 <p class="section__description">
-                    Ingeniero en Informática títulado en la Universidad de Valparaíso.
-                    Me considero un profesional con alta motivación hacia los logros y desarrollo personal, 
-                    poseo amplias competencias técnicas, personales, sociales y profesionales, 
-                    para desarrollar en diversas labores, sustentado gracias a un constante perfeccionamiento 
-                    en nuevas técnicas y tecnologías del mercado. 
+                    Informatico de profesion, aficionado al deporte y actividades al aire libre, melomano desde nacimiento 
                 </p>
+            </div>
+            <div class="col-md-12 text-center">
                 <a href="index.html" class="section_btn site-btn" target="_blank"><img src="assets/img/btn-icon.png" alt="">Descargar CV</a>
             </div>
         </div>
@@ -121,13 +119,9 @@
             <div class="col-md-10">
                 <h2 id="resume_header" class="section__title">Resumen_</h2>
                 <p class="section__description">
-                    Lorem ipsum dolor sit amet, <i><b>communication</b></i> adipisicing elit, <i><b>helpful</b></i>
-                    eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    <i><b>sence of
-                            humour</b></i> ullamco laboris nisi ut <i><b>honest</b></i> ea commodo consequat. Duis aute
-                    irure dolor in
-                    upper-intermediate english level velit dolore eu ivivdtevoluptatem ontend developer.
+                    Ingeniero en Informática titulado en la Universidad de Valparaíso con más de 6 año de experiencia laboral con amplias competencias técnicas y personales. 
+                    Me considero un profesional con alta motivación hacia los logros y desarrollo personal, en constante perfecionamiento técnico y administrativo. <br>
+                    Poseo experiencia en todas las áreas que conllevar el desarrollo web, levantamiento y análisis de requerimientos, planificación de proyecto, desarrollo y mantención.
                 </p>
             </div>
         </div>
@@ -157,7 +151,7 @@
                     <p class="resume-list__block-title">Informat</p>
                     <p class="resume-list__block-date">2016 - Actualidad</p>
                     <p>
-                        Desarrollador de Software
+                        Desarrollador Full-Stack
                     </p>
                 </div>
                 <div class="resume-list__block">
@@ -171,11 +165,10 @@
                     <p class="resume-list__block-title">Universidad de Valparaiso</p>
                     <p class="resume-list__block-date">2013 - 2014</p>
                     <p>
-                        Desarrollador de Software
+                        Programador Junior
                     </p>
                 </div>
             </div>
-
         </div>
         <div class="row section__resume progress-list js-progress-list">
             <div class="col-md-12">
