--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="">
+    <meta name="description" content="Curriculum Vitae Juan Mieres">
     <meta name="author" content="Juan Mieres Solis">
     <title>Web Site JM</title>
     <link type="image/x-icon" rel="icon" href="assets/img/logo.ico">
@@ -25,7 +25,7 @@
                 <div class="menu__wrapper d-none d-lg-block col-md-12">
                     <nav class="">
                         <ul>
-                            <li><a href="index.html#hello">Hola</a></li>
+                            <!-- <li><a href="index.html#hello">Hola</a></li> -->
                             <li><a href="index.html#resume">Resumen</a></li>
                             <li><a href="index.html#portfolio">Proyectos</a></li>
                             <li><a href="index.html#contact">Contacto</a></li>
@@ -50,7 +50,7 @@
             </div>
             <nav class="mobile-menu__wrapper">
                 <ul>
-                    <li><a href="index.html#hello">Hola</a></li>
+                    <!-- <li><a href="index.html#hello">Hola</a></li> -->
                     <li><a href="index.html#resume">Resumen</a></li>
                     <li><a href="index.html#portfolio">Proyectos</a></li>
                     <li><a href="index.html#contact">Contacto</a></li>
@@ -153,6 +153,11 @@
                     <p>
                         Desarrollador Full-Stack
                     </p>
+                    <ul>
+                        <li>
+                            Encargado de desarrollar el registro problacional de cáncer para las Provincias de valparaiso y Petorca.
+                        </li>
+                    </ul>
                 </div>
                 <div class="resume-list__block">
                     <p class="resume-list__block-title">Solmat</p>
@@ -160,6 +165,11 @@
                     <p>
                         Desarrollador de Software
                     </p>
+                    <ul>
+                        <li>
+                            Encargado de desarrollar el registro problacional de cáncer para las Provincias de valparaiso y Petorca.
+                        </li>
+                    </ul>
                 </div>
                 <div class="resume-list__block">
                     <p class="resume-list__block-title">Universidad de Valparaiso</p>
@@ -167,6 +177,11 @@
                     <p>
                         Programador Junior
                     </p>
+                    <ul>
+                        <li>
+                            Encargado de desarrollar el registro problacional de cáncer para las Provincias de valparaiso y Petorca.
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -586,7 +601,7 @@
                         </dl>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 text-center">
                     <div class="contacts__social">
                         <ul>
                             <li><a href="https://github.com/juanmieres" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
@@ -596,7 +611,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 text-center">
                     <div class="contacts__social">
                         <ul>
                             <li><a href="https://www.facebook.com/juan.mieressolis" target="_blank"><i class="fab fa-facebook-square"></i> Facebook</a></li>
@@ -624,7 +639,6 @@
     <script src="assets/js/portfolio-filter.js"></script>
     <script src="assets/js/slider-carousel.js"></script>
     <script src="assets/js/mobile-menu.js"></script>
-    <script src="assets/js/contacts.js"></script>
     <script src="assets/js/mbclicker.min.js"></script>
     <script src="assets/js/site-btn.js"></script>
     <script src="assets/js/style-switcher.js"></script>
