--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </p>
             </div>
             <div class="col-md-12 text-center">
-                <a href="index.html" class="section_btn site-btn" target="_blank"><img src="assets/img/btn-icon.png" alt="">Descargar CV</a>
+                <a href="data/CV-Juan-Mieres-Solis.pdf" class="section_btn site-btn" download="download" target="_blank"><img src="assets/img/btn-icon.png" alt="">Descargar CV</a>
             </div>
         </div>
     </section>
@@ -119,8 +119,8 @@
             <div class="col-md-10">
                 <h2 id="resume_header" class="section__title">Resumen_</h2>
                 <p class="section__description">
-                    Ingeniero en Informática titulado en la Universidad de Valparaíso con más de 6 año de experiencia laboral con amplias competencias técnicas y personales. 
-                    Me considero un profesional con alta motivación hacia los logros y desarrollo personal, en constante perfecionamiento técnico y administrativo. <br>
+                    Ingeniero en Informática titulado en la Universidad de Valparaíso con más de 6 año de experiencia laboral en el desarrollo de aplicaciones web, con amplias competencias técnicas y personales. <br>
+                    Me considero un profesional con alta motivación hacia los logros y desarrollo personal, en constante perfeccionamiento técnico y administrativo. <br>
                     Poseo experiencia en todas las áreas que conllevar el desarrollo web, levantamiento y análisis de requerimientos, planificación de proyecto, desarrollo y mantención.
                 </p>
             </div>
@@ -154,9 +154,8 @@
                         Desarrollador Full-Stack
                     </p>
                     <ul>
-                        <li>
-                            Encargado de desarrollar el registro problacional de cáncer para las Provincias de valparaiso y Petorca.
-                        </li>
+                        <li>Encargado de gestionar el desarrollo de la aplicación web IPROPERTY.</li>
+                        <li>Miembro del equipo de desarrollo de UWIGO.</li>
                     </ul>
                 </div>
                 <div class="resume-list__block">
@@ -166,9 +165,8 @@
                         Desarrollador de Software
                     </p>
                     <ul>
-                        <li>
-                            Encargado de desarrollar el registro problacional de cáncer para las Provincias de valparaiso y Petorca.
-                        </li>
+                        <li>Encarcago de migrar plataforma samimetrics a su versión 2.0.</li>
+                        <li>Desarrollar plataforma cyclo sustainability.</li>
                     </ul>
                 </div>
                 <div class="resume-list__block">
@@ -178,9 +176,8 @@
                         Programador Junior
                     </p>
                     <ul>
-                        <li>
-                            Encargado de desarrollar el registro problacional de cáncer para las Provincias de valparaiso y Petorca.
-                        </li>
+                        <li>Encargado de desarrollar aplicacion web para el registro poblacional de cáncer en las Provincias de Valparaíso y Petorca.</li>
+                        <li>Miembro del equipo de desarrollo de RAVENO.</li>
                     </ul>
                 </div>
             </div>
@@ -463,7 +460,7 @@
                 <div class="col-md-6 col-lg-7 project-card__info">
                     <h3 class="project-card__title">COMPARAR PRODUCTOS</h3>
                     <p class="project-card__description">
-                        Plataforma para que permite comprar el precio de productos del retail, hacer seguimiento y 
+                        Plataforma que permite comprar el precio de diferentes productos del retail, hacer seguimiento y 
                         recibir notificaciones cuando cumpla con el descuento requerido.
                     </p>
                     <p class="project-card__stack">Stack Utilizados:</p>
@@ -540,7 +537,7 @@
                         Iproperty, una nueva herramienta que facilita y agiliza la administración de activos, principalmente inmobiliarios,
                         aunque sus alcances también se extienden a otros sectores de la economía, entre ellos, el de transporte y minería.
                     </p>
-                    <p class="project-card__stack">Used stack:</p>
+                    <p class="project-card__stack">Stack Utilizados:</p>
                     <ul class="tags">
                         <li>Html5</li>
                         <li>Css3</li>
@@ -566,7 +563,7 @@
                         SAMI es una herramienta de cálculo de impactos ambientales de productos basada en la metodología de Análisis de Ciclo de Vida, 
                         que es parte de las normas ISO 14040.
                     </p>
-                    <p class="project-card__stack">Used stack:</p>
+                    <p class="project-card__stack">Stack Utilizados:</p>
                     <ul class="tags">
                         <li>Html5</li>
                         <li>Css3</li>
