--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </p>
             </div>
             <div class="col-md-12 text-center">
-                <a href="data/CV-Juan-Mieres-Solis.pdf" class="section_btn site-btn" download="download" target="_blank"><img src="assets/img/btn-icon.png" alt="">Descargar CV</a>
+                <a href="data/CV-Juan-Mieres-Solis.pdf" download class="section_btn site-btn" target="_blank"><img src="assets/img/btn-icon.png" alt="">Descargar CV</a>
             </div>
         </div>
     </section>
@@ -121,7 +121,7 @@
                 <p class="section__description">
                     Ingeniero en Informática titulado en la Universidad de Valparaíso con más de 6 año de experiencia laboral en el desarrollo de aplicaciones web, con amplias competencias técnicas y personales. <br>
                     Me considero un profesional con alta motivación hacia los logros y desarrollo personal, en constante perfeccionamiento técnico y administrativo. <br>
-                    Poseo experiencia en todas las áreas que conllevar el desarrollo web, levantamiento y análisis de requerimientos, planificación de proyecto, desarrollo y mantención.
+                    Poseo experiencia en todas las áreas que conlleva el desarrollo web, levantamiento y análisis de requerimientos, planificación de proyecto, desarrollo y mantención.
                 </p>
             </div>
         </div>
