--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Curriculum Vitae Juan Mieres">
+    <meta name="description" content="CV Juan Mieres">
     <meta name="author" content="Juan Mieres Solis">
-    <title>Web Site JM</title>
+    <title>JMIERES</title>
     <link type="image/x-icon" rel="icon" href="assets/img/logo.ico">
     <link type="image/x-icon" rel="icon shortcut" href="assets/img/logo.ico">
     <link rel="stylesheet" href="assets/css/color.css">
