--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
                         </dl>
                     </div>
                     <p class="personal-profile__social">
+                        <a href="https://www.linkedin.com/in/juan-mieres-solis/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/juanmieres" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="https://bitbucket.org/juan_mieres/" target="_blank"><i class="fab fa-bitbucket"></i></a>
-                        <a href="https://www.linkedin.com/in/juan-mieres-solis/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://www.facebook.com/juan.mieressolis" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                        <a href="https://www.instagram.com/juan_mieres_s/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <!-- <a href="https://www.facebook.com/juan.mieressolis" target="_blank"><i class="fab fa-facebook-square"></i></a> -->
+                        <!-- <a href="https://www.instagram.com/juan_mieres_s/" target="_blank"><i class="fab fa-instagram"></i></a> -->
                     </p>
                 </div>
             </div>
@@ -136,26 +136,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8 section__resume resume-list">
-                <h3 class="resume-list_title">educación</h3>
-                <div class="resume-list__block">
-                    <p class="resume-list__block-title">Universidad de Valparaíso</p>
-                    <p class="resume-list__block-date">2007 - 2013</p>
-                    <p>
-                        Ingeniero en Informática
-                    </p>
-                </div>
-                <div class="resume-list__block">
-                    <p class="resume-list__block-title">Universidad de Valparaíso</p>
-                    <p class="resume-list__block-date">2007 - 2013</p>
-                    <p>
-                        Licenciado en Ciencias de la Ingeniería Informática
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-8 section__resume resume-list">
+        <!-- </div>
+        <div class="row"> -->
+            <div class="col-md-6 section__resume resume-list">
                 <h3 class="resume-list_title">experiencia laboral</h3>
                 <div class="resume-list__block">
                     <p class="resume-list__block-title">Informat</p>
@@ -189,6 +172,24 @@
                         <li>Encargado de desarrollar aplicacion web para el registro poblacional de cáncer en las Provincias de Valparaíso y Petorca.</li>
                         <li>Miembro del equipo de desarrollo de RAVENO.</li>
                     </ul>
+                </div>
+            </div>
+
+            <div class="col-md-6 section__resume resume-list">
+                <h3 class="resume-list_title">educación</h3>
+                <div class="resume-list__block">
+                    <p class="resume-list__block-title">Universidad de Valparaíso</p>
+                    <p class="resume-list__block-date">2007 - 2013</p>
+                    <p>
+                        Ingeniero en Informática
+                    </p>
+                </div>
+                <div class="resume-list__block">
+                    <p class="resume-list__block-title">Universidad de Valparaíso</p>
+                    <p class="resume-list__block-date">2007 - 2013</p>
+                    <p>
+                        Licenciado en Ciencias de la Ingeniería Informática
+                    </p>
                 </div>
             </div>
         </div>
@@ -594,7 +595,7 @@
         <div id="contact" class="container section">
             <div class="row">
                 <div class="col-md-12">
-                    <p id="contacts_header" class="section__title">Contactame_</p>
+                    <p id="contacts_header" class="section__title">Contáctame_</p>
                 </div>
             </div>
             <div class="row contacts">
@@ -608,21 +609,27 @@
                         </dl>
                     </div>
                 </div>
-                <div class="col-md-3 text-center">
+                <div class="col-md-2">
                     <div class="contacts__social">
                         <ul>
-                            <li><a href="https://github.com/juanmieres" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
-                            <li><a href="https://bitbucket.org/juan_mieres/" target="_blank"><i class="fab fa-bitbucket"></i> Bitbucket</a></li>
                             <li><a href="https://www.linkedin.com/in/juan-mieres-solis/" target="_blank"><i class="fab fa-linkedin"></i> Linkedin</a></li>
                         </ul>
                     </div>
                 </div>
 
-                <div class="col-md-3 text-center">
+                <div class="col-md-2">
                     <div class="contacts__social">
                         <ul>
-                            <li><a href="https://www.facebook.com/juan.mieressolis" target="_blank"><i class="fab fa-facebook-square"></i> Facebook</a></li>
-                            <li><a href="https://www.instagram.com/juan_mieres_s/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
+                            <li><a href="https://github.com/juanmieres" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="contacts__social">
+                        <ul>
+                            <li><a href="https://bitbucket.org/juan_mieres/" target="_blank"><i class="fab fa-bitbucket"></i> Bitbucket</a></li>
+                            <!-- <li><a href="https://www.facebook.com/juan.mieressolis" target="_blank"><i class="fab fa-facebook-square"></i> Facebook</a></li> -->
+                            <!-- <li><a href="https://www.instagram.com/juan_mieres_s/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li> -->
                         </ul>
                     </div>
                 </div>
